# musicserver

./: .gitignore  README.md  bootstrap.sh  docker-compose.yml  run.sh
docs/: sync-scenario.md
python_syncworker/: .dockerignore  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
python_syncworker/docs/: deploy.md  sync-scenario.md
python_syncworker/src/syncworker/: __main__.py  bootstrap.py  config.py  scheduler.py
python_syncworker/src/syncworker/adapters/: filesystem.py  filesystem_adapter.py  navidrome.py  navidrome_adapter.py  soundcloud.py  soundcloud_adapter.py
python_syncworker/src/syncworker/adapters/models/: filesystem.py  filesystem_models.py  navidrome_models.py  soundcloud_models.py
python_syncworker/src/syncworker/models/: library_models.py
python_syncworker/src/syncworker/repository/: library_repository.py
python_syncworker/src/syncworker/service/: sync_service.py
python_syncworker/src/syncworker/services/: full_sync_service.py  service_factory.py
python_syncworker/src/syncworker/usecases/: clear_navidrome_likes_usecase.py  download_soundcloud_tracks_usecase.py  remove_unliked_tracks_usecase.py  scan_navidrome_usecase.py  sync_liked_tracks_usecase.py  sync_playlists_usecase.py
python_syncworker/tests/adapters/: test_filesystem_adapter.py  test_navidrome_adapter.py  test_soundcloud_adapter.py
python_syncworker/tests/integration/adapters/: test_filesystem_adapter_integration.py
syncworker/: Dockerfile
syncworker/scripts/: download_sc.sh  full_sync.sh
